GNOME Bugzilla – Bug 784081
More build fixes
Last modified: 2017-06-23 06:28:53 UTC
.
Created attachment 354223 [details] [review] lib: Fix gepub_text_chunk_new() related warnings There was no need to use an unsigned char for storage or as a function argument, so change the data type and cast the calls instead.
Created attachment 354224 [details] [review] lib: Fix warnings in xmlGetProp() usage libxml's "BAD_CAST()" was made for this.
Created attachment 354225 [details] [review] lib: Fix signedness warnings in GepubArchive
Created attachment 354226 [details] [review] lib: Fix signedness warnings in GepubDoc
Created attachment 354227 [details] [review] lib: Fix signedness warnings in the utility functions
Created attachment 354228 [details] [review] lib: Fix memory leak in gepub_utils_get_text_elements()
Created attachment 354229 [details] [review] tests: Fixed signedness warnings
Created attachment 354230 [details] [review] build: Fix "ld" warning "-export-symbols-regex" is a libtool command, not an ld one: /usr/bin/ld: warning: cannot find entry symbol xport-symbols-regex "^gepub_*"; defaulting to 0000000000003d70
Created attachment 354231 [details] [review] lib: Fix API docs Fixing the GIR scanner's errors.
Review of attachment 354230 [details] [review]: The easiest way to fix this would be to add "G_GNUC_INTERNAL" to the functions that are internal only. You could also use a simple map file: https://git.gnome.org/browse/totem-pl-parser/tree/plparse/meson.build#n58
Attachment 354223 [details] pushed as 953d8ef - lib: Fix gepub_text_chunk_new() related warnings Attachment 354224 [details] pushed as 073f365 - lib: Fix warnings in xmlGetProp() usage Attachment 354225 [details] pushed as 5fd5bb2 - lib: Fix signedness warnings in GepubArchive Attachment 354226 [details] pushed as 977eb85 - lib: Fix signedness warnings in GepubDoc Attachment 354227 [details] pushed as f219b3c - lib: Fix signedness warnings in the utility functions Attachment 354228 [details] pushed as 79a416a - lib: Fix memory leak in gepub_utils_get_text_elements() Attachment 354229 [details] pushed as a260fab - tests: Fixed signedness warnings Attachment 354230 [details] pushed as 4b332c8 - build: Fix "ld" warning Attachment 354231 [details] pushed as 2cacec1 - lib: Fix API docs