lib: Fix gepub_text_chunk_new() related warnings

There was no need to use an unsigned char for storage or as a function
argument, so change the data type and cast the calls instead.

https://bugzilla.gnome.org/show_bug.cgi?id=784081